fix: correct modal height on mobile

--- a/src/modals/CartModal/cartModal.module.scss
+++ b/src/modals/CartModal/cartModal.module.scss
@@ -10,6 +10,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    @media (max-width: 767px) {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .overlay {
@@ -26,7 +35,7 @@
 
 .cartModal {
     @include flexCol;
-    position: static;
+    position: fixed;
     z-index: 60;
     line-height: 1.4;
     background: #f1f1f1;
@@ -38,14 +47,13 @@
     padding-bottom: 50px;
 
     @media (max-width: 767px) {
-        .modal-content {
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            transform: none;
-            border-radius: 0;
-        }
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        transform: none;
+        border-radius: 0;
+        flex-grow: 1;
     }
 
     @include respond(md) {
